--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "smartinbox-backend",
+  "name": "typescript-node-starter-kit",
   "version": "1.0.0",
-  "description": "Modular Node.js + TypeScript backend with admin/user APIs",
+  "description": "This is a starter kit for building APIs using Node.js, TypeScript, Prisma, and Redis.",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
@@ -21,7 +21,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nodemailer": "^6.9.11",
     "redis": "^4.6.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -31,14 +34,16 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
     "@types/supertest": "^2.0.12",
+    "@types/yargs": "^17.0.32",
     "jest": "^29.7.0",
     "json2csv": "^6.0.0",
+    "nodemon": "^3.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "nodemon": "^3.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yargs": "^17.7.2"
   },
   "engines": {
     "node": ">=18.0.0"
