--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "start": "node dist/index.js",
     "seed": "ts-node prisma/seed.ts",
     "test": "jest",
+    "worker": "ts-node scripts/worker.ts",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
+    "@bull-board/api": "^4.10.0",
+    "@bull-board/express": "^4.10.0",
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^4.11.4",
     "connect-redis": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
