--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
     "@bull-board/api": "^4.10.0",
     "@bull-board/express": "^4.10.0",
     "@prisma/client": "^5.13.0",
+    "@sentry/node": "^9.33.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^4.11.4",
     "connect-redis": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.1",
+    "i18next": "^25.3.0",
+    "ioredis": "^5.6.1",
     "nodemailer": "^6.9.11",
     "redis": "^4.6.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.1.0",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@json2csv/node": "^7.0.6",
     "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.7",
@@ -40,8 +44,8 @@
     "@types/supertest": "^2.0.12",
     "@types/yargs": "^17.0.32",
     "jest": "^29.7.0",
-    "json2csv": "^6.0.0",
     "nodemon": "^3.1.0",
+    "prisma": "^6.10.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
