feat: migrate from PostgreSQL to MySQL; update Redis integration for development and production environments; enhance OTP and rate limiting with in-memory fallbacks

--- a/.env
+++ b/.env
@@ -3,7 +3,13 @@ PORT=3000
 NODE_ENV=development
 
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
+# DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
+DATABASE_URL="mysql://root:@localhost:3306/typescript_node_starter_kit"
+
+# MYSQL_HOST="localhost"
+# MYSQL_USER="root"
+# MYSQL_DB="typescript_node_starter_kit"
+# MYSQL_PASSWORD=""
 
 # Redis
 REDIS_HOST=127.0.0.1
