--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@bull-board/express": "^4.10.0",
     "@prisma/client": "^6.10.1",
     "@sentry/node": "^9.33.0",
+    "@types/json2csv": "^5.0.7",
     "bcrypt": "^5.1.1",
     "bullmq": "^4.11.4",
     "connect-redis": "^7.0.0",
@@ -28,6 +29,7 @@
     "express-session": "^1.18.1",
     "i18next": "^25.3.0",
     "ioredis": "^5.6.1",
+    "json2csv": "^6.0.0-alpha.2",
     "nodemailer": "^6.9.11",
     "redis": "^4.6.7",
     "swagger-jsdoc": "^6.2.8",
