chore: update SMTP configuration and enhance reset password link handling

--- a/.env
+++ b/.env
@@ -23,8 +23,8 @@ JWT_SECRET=your_jwt_secret
 SESSION_SECRET=session_
 
 # Mail
-SMTP_HOST=smtp.mailtrap.io
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_username
-SMTP_PASS=your_password
-MAIL_FROM=no-reply@starterlit.com
+SMTP_USER=rignesh.eww@gmail.com
+SMTP_PASS=zhaukrypggqbjwsl
+MAIL_FROM=rignesh.eww@gmail.com
