chore: replace sensitive env values and unify logging

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # Database
 # DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
-DATABASE_URL="mysql://root:@localhost:3306/typescript_node_starter_kit"
+DATABASE_URL="mysql://user:password@localhost:3306/app_db"
 
 # MYSQL_HOST="localhost"
 # MYSQL_USER="root"
@@ -23,8 +23,8 @@ JWT_SECRET=your_jwt_secret
 SESSION_SECRET=session_
 
 # Mail
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=smtp.example.com
 SMTP_PORT=587
-SMTP_USER=rignesh.eww@gmail.com
-SMTP_PASS=zhaukrypggqbjwsl
-MAIL_FROM=rignesh.eww@gmail.com
+SMTP_USER=user@example.com
+SMTP_PASS=your_password
+MAIL_FROM=no-reply@example.com
