--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ioredis": "^5.6.1",
     "json2csv": "^6.0.0-alpha.2",
     "nodemailer": "^6.9.11",
+    "compression": "^1.7.4",
+    "helmet": "^7.0.0",
     "redis": "^4.6.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
