--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # Database
 # DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
-DATABASE_URL="mysql://user:password@localhost:3306/app_db"
+DATABASE_URL="mysql://root:@localhost:3306/typescript_node_starter_kit"
 
 # MYSQL_HOST="localhost"
 # MYSQL_USER="root"
