--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "This is a starter kit for building APIs using Node.js, TypeScript, Prisma, and Redis.",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --require tsconfig-paths/register src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "seed": "ts-node prisma/seed.ts",
     "test": "jest",
-    "worker": "ts-node scripts/worker.ts",
+    "worker": "ts-node -r tsconfig-paths/register scripts/worker.ts",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:studio": "npx prisma studio"
@@ -53,6 +53,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
     "xlsx": "^0.18.5",
     "yargs": "^17.7.2"
