--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,15 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "Node",
+    "baseUrl": ".",
+    "paths": {
+      "@controllers/*": ["src/controllers/*"],
+      "@utils/*": ["src/utils/*"],
+      "@models/*": ["src/models/*"],
+      "@/*": ["src/*"],
+      "@tests/*": ["tests/*"],
+      "@scripts/*": ["scripts/*"]
+    },
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
