fix(tsconfig): allow compiling tests and seed file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "@scripts/*": ["scripts/*"]
     },
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
