fix microservice imports and tsconfig

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "ts-node prisma/seed.ts",
     "test": "jest",
     "worker": "ts-node -r tsconfig-paths/register scripts/worker.ts",
+    "microservices": "ts-node scripts/start-services.ts",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:studio": "npx prisma studio"
@@ -36,6 +37,7 @@
     "redis": "^4.6.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
